[package]
name = "ufmt-stdio"
version = "0.3.0"
authors = ["Douman <douman@gmx.se>"]
description = "C stdio writer for ufmt"
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/ufmt-stdio"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
ufmt = "0.2"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"
